tests/golden/manifests-accesspolicy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: nginx:1.25
          name: hello
      ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: hello
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels: {}
  name: hello-access
  namespace: default
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: other
      ports:
        - port: 80
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock:
            cidr: 10.0.0.0/8
      ports:
        - port: 443
    - ports:
        - port: 53
          protocol: UDP
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.gke.io/v1alpha3
kind: FQDNNetworkPolicy
metadata:
  annotations: {}
  labels: {}
  name: hello-fqdn
  namespace: default
spec:
  egress:
    - ports:
        - port: 443
          protocol: TCP
      to:
        - fqdns:
            - api.github.com
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
    - Egress
