tests/golden/manifests-azure-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    azure: enabled
    otel: enabled
    wonderwall: enabled
  name: azure-sidecar
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-sidecar
      azure: enabled
      otel: enabled
      wonderwall: enabled
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: azure-sidecar
        azure: enabled
        otel: enabled
        wonderwall: enabled
    spec:
      containers:
        - image: nginx:1.25
          name: azure-sidecar
          ports:
            - containerPort: 8080
              name: http
      initContainers:
        - env:
            - name: WONDERWALL_OPENID_PROVIDER
              value: azure
            - name: WONDERWALL_INGRESS
              value: https://azure-sidecar.local
            - name: WONDERWALL_UPSTREAM_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: WONDERWALL_UPSTREAM_PORT
              value: "8080"
            - name: WONDERWALL_BIND_ADDRESS
              value: 0.0.0.0:7564
            - name: WONDERWALL_METRICS_BIND_ADDRESS
              value: 0.0.0.0:7565
            - name: WONDERWALL_PROBE_BIND_ADDRESS
              value: 0.0.0.0:7566
            - name: WONDERWALL_AUTO_LOGIN
              value: "true"
            - name: WONDERWALL_AUTO_LOGIN_IGNORE_PATHS
              value: /internal/*
          envFrom:
            - secretRef:
                name: azure-azure-sidecar
            - secretRef:
                name: wonderwall-azure-config
          image: ghcr.io/nais/wonderwall:latest
          imagePullPolicy: IfNotPresent
          name: wonderwall
          ports:
            - containerPort: 7564
              name: wonderwall
              protocol: TCP
            - containerPort: 7565
              name: ww-metrics
              protocol: TCP
            - containerPort: 7566
              name: ww-probe
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: azure-sidecar
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: azure-sidecar
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: azure-sidecar
  namespace: default
spec:
  rules:
    - host: azure-sidecar.local
      http:
        paths:
          - backend:
              service:
                name: azure-sidecar
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: nais.io/v1
kind: AzureAdApplication
metadata:
  annotations: {}
  labels:
    azure: enabled
    otel: enabled
    wonderwall: enabled
  name: azure-sidecar
  namespace: default
spec:
  AllowAllUsers: false
  Claims: {}
  PreAuthorizedApplications: []
  ReplyUrls:
    - url: https://azure-sidecar.local/oauth2/callback
  SecretName: azure-azure-sidecar
  SinglePageApplication: false
