tests/golden/manifests-idporten.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    idporten: enabled
    otel: enabled
    wonderwall: enabled
  name: idporten
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idporten
      idporten: enabled
      otel: enabled
      wonderwall: enabled
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: idporten
        idporten: enabled
        otel: enabled
        wonderwall: enabled
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: idporten-sso
          image: nginx:1.25
          name: idporten
          ports:
            - containerPort: 8080
              name: http
      initContainers:
        - env:
            - name: WONDERWALL_OPENID_PROVIDER
              value: idporten
            - name: WONDERWALL_INGRESS
              value: https://idporten.local
            - name: WONDERWALL_UPSTREAM_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: WONDERWALL_UPSTREAM_PORT
              value: "8080"
            - name: WONDERWALL_BIND_ADDRESS
              value: 0.0.0.0:7564
            - name: WONDERWALL_METRICS_BIND_ADDRESS
              value: 0.0.0.0:7565
            - name: WONDERWALL_PROBE_BIND_ADDRESS
              value: 0.0.0.0:7566
          envFrom:
            - secretRef:
                name: idporten-sso
            - secretRef:
                name: wonderwall-idporten-config
          image: ghcr.io/nais/wonderwall:latest
          imagePullPolicy: IfNotPresent
          name: wonderwall
          ports:
            - containerPort: 7564
              name: wonderwall
              protocol: TCP
            - containerPort: 7565
              name: ww-metrics
              protocol: TCP
            - containerPort: 7566
              name: ww-probe
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: idporten
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: idporten
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: idporten
  namespace: default
spec:
  rules:
    - host: idporten.local
      http:
        paths:
          - backend:
              service:
                name: idporten
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: nais.io/v1
kind: IDPortenClient
metadata:
  annotations: {}
  labels:
    idporten: enabled
    otel: enabled
    wonderwall: enabled
  name: idporten
  namespace: default
spec:
  SecretName: idporten-sso
