tests/golden/manifests-ingress-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: ingress-grpc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-grpc
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-grpc
    spec:
      containers:
        - image: nginx:1.25
          name: ingress-grpc
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: ingress-grpc
  namespace: default
spec:
  ports:
    - name: grpc
      port: 80
      targetPort: http
  selector:
    app: ingress-grpc
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels: {}
  name: ingress-grpc
  namespace: default
spec:
  rules:
    - host: grpc.example.local
      http:
        paths:
          - backend:
              service:
                name: ingress-grpc
                port:
                  number: 80
            path: /
            pathType: Prefix
