tests/golden/manifests-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    otel: enabled
    wonderwall: enabled
  name: login
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: login
        otel: enabled
        wonderwall: enabled
    spec:
      containers:
        - image: nginx:1.25
          name: login
          ports:
            - containerPort: 8080
              name: http
      initContainers:
        - env:
            - name: WONDERWALL_OPENID_PROVIDER
              value: idporten
            - name: WONDERWALL_INGRESS
              value: https://login.local
            - name: WONDERWALL_UPSTREAM_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: WONDERWALL_UPSTREAM_PORT
              value: "8080"
            - name: WONDERWALL_BIND_ADDRESS
              value: 0.0.0.0:7564
            - name: WONDERWALL_METRICS_BIND_ADDRESS
              value: 0.0.0.0:7565
            - name: WONDERWALL_PROBE_BIND_ADDRESS
              value: 0.0.0.0:7566
            - name: WONDERWALL_AUTO_LOGIN
              value: "true"
            - name: WONDERWALL_AUTO_LOGIN_IGNORE_PATHS
              value: /internal/*
          envFrom:
            - secretRef:
                name: login-global-config
            - secretRef:
                name: login-config-login
          image: ghcr.io/nais/wonderwall:latest
          imagePullPolicy: IfNotPresent
          name: wonderwall
          ports:
            - containerPort: 7564
              name: wonderwall
              protocol: TCP
            - containerPort: 7565
              name: ww-metrics
              protocol: TCP
            - containerPort: 7566
              name: ww-probe
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: login
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: login
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels: {}
  name: login
  namespace: default
spec:
  rules:
    - host: login.local
      http:
        paths:
          - backend:
              service:
                name: login
                port:
                  number: 80
            path: /
            pathType: Prefix
