tests/golden/manifests-prom-annotations-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: prom-annot-basic
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom-annot-basic
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
      labels:
        app: prom-annot-basic
    spec:
      containers:
        - image: nginx:1.25
          name: prom-annot-basic
          ports:
            - containerPort: 11335
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: prom-annot-basic
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 11335
  selector:
    app: prom-annot-basic
  type: ClusterIP
