tests/golden/manifests-tokenx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: tokenx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokenx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tokenx
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: tokenx-tokenx
          image: nginx:1.25
          name: tokenx
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels: {}
  name: tokenx
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: tokenx
  type: ClusterIP
---
apiVersion: nais.io/v1
kind: Jwker
metadata:
  annotations: {}
  labels: {}
  name: tokenx
  namespace: default
spec:
  AccessPolicy: {}
  SecretName: tokenx-tokenx
